Fix spacing in login/reg/landing

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -22,7 +22,7 @@ body {
 
 .title {
 	text-align: center;
-	margin: 0.5em auto;
+	margin: 0 auto;
 }
 
 .button {
@@ -44,6 +44,7 @@ body {
 
 .hint {
 	font-size: 0.8em;
+	margin: 1.5em auto;
 }
 
 .cloud {
