--- a/scss/logreg.scss
+++ b/scss/logreg.scss
@@ -1,6 +1,10 @@
 @import 'base';
 @import 'index';
 
+.title {
+    margin: 0.5em auto;
+}
+
 .field {
     display: block;
     position: relative;
